Display Y/N columns in reports as text rather than images. Closes #9.